Prevent linewrap

--- a/webapp/originalDataPoint/style.less
+++ b/webapp/originalDataPoint/style.less
@@ -51,3 +51,7 @@
 .odp__input-table input.odp__national-class-row-class-name-input {
   padding-left: 20px;
 }
+
+.odp__extent-of-forest-percent-cell {
+  white-space: nowrap;
+}
